examples/bad/06-17-function_type.latf
int main() {
    [(int) -> int] f = lambda (int x) -> int . x;
    f = lambda (int x) -> void { return; }; // error

    return 0;
}